--- a/index.html
+++ b/index.html
@@ -236,6 +236,19 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
+        <!-- Social Links -->
+        <div class="d-flex align-items-center gap-3">
+          <a href="https://github.com/manikanda2004" target="_blank" class="text-dark fs-4">
+            <i class="bi bi-github"></i>
+          </a>
+          <a href="https://leetcode.com/Manikandan_2004" target="_blank" class="mx-2">
+            <img src="assets/leetcode.png" alt="LeetCode" style="width:24px; height:24px;">
+          </a>
+          <a href="https://www.linkedin.com/in/manikandan-r-11879128a/" target="_blank" class="text-primary fs-4">
+            <i class="bi bi-linkedin"></i>
+          </a>
+
+        </div>
 
         <!-- Right Corner Buttons -->
         <div class="d-flex align-items-center gap-2">
@@ -283,8 +296,8 @@
           modern technologies and eager to contribute to team success through both my existing and growing skill set.
         </p>
         <div class="mt-4">
-          <a href="/Resume/Manikandan_R.pdf" download
-            class="btn btn-danger rounded-pill px-4 py-2 me-3 fw-bold">Download Resume</a>
+          <a href="Resume/Manikandan.pdf" download class="btn btn-danger rounded-pill px-4 py-2 me-3 fw-bold">Download
+            Resume</a>
           <a href="#contact" class="btn btn-outline-danger rounded-pill px-4 py-2 fw-bold">Contact Me</a>
         </div>
       </div>
@@ -544,10 +557,22 @@
 
 
 
-  <!-- Footer -->
   <footer class="text-center py-3 mt-5 bg-light">
+    <div class="mb-2">
+      <a href="https://github.com/manikanda2004" target="_blank" class="mx-2 text-dark fs-5">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="https://leetcode.com/Manikandan_2004" target="_blank" class="mx-2">
+        <img src="assets/leetcode.png" alt="LeetCode" style="width:24px; height:24px;">
+      </a>
+
+      <a href="https://www.linkedin.com/in/manikandan-r-11879128a/" target="_blank" class="mx-2 text-primary fs-5">
+        <i class="bi bi-linkedin"></i>
+      </a>
+    </div>
     <small>© 2025 Manikandan R. All rights reserved.</small>
   </footer>
+
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
