--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           modern technologies and eager to contribute to team success through both my existing and growing skill set.
         </p>
         <div class="mt-4">
-          <a href="Resume/Manikandan_R.pdf" download class="btn btn-danger rounded-pill px-4 py-2 me-3 fw-bold">Download
+          <a href="Resume/manikandan.pdf" download class="btn btn-danger rounded-pill px-4 py-2 me-3 fw-bold">Download
             Resume</a>
           <a href="#contact" class="btn btn-outline-danger rounded-pill px-4 py-2 fw-bold">Contact Me</a>
         </div>
