--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               Online clothing store built using HTML, CSS, JavaScript, and Bootstrap.
               Features include product listings, shopping cart, and responsive design.
             </p>
-            <a href="https://github.com/manikanda2004/clothing_product_using_html-css-bootstramp" download
+            <a href="https://red-store-ecommerce-5ym2ferj5-manikandans-projects-6f603c9b.vercel.app" download
               class="btn btn-danger rounded-pill px-4 download-btn">Download</a>
           </div>
         </div>
@@ -342,7 +342,7 @@
               A responsive portfolio website created with HTML, CSS3, JavaScript, and Bootstrap.
               Features smooth scrolling, dark mode, and interactive project showcases.
             </p>
-            <a href="portfolio.pdf" download class="btn btn-danger rounded-pill px-4 download-btn">Download</a>
+            <a href="https://github.com/manikanda2004/Myportfolio.git" download class="btn btn-danger rounded-pill px-4 download-btn">Download</a>
           </div>
         </div>
       </div>
