--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@
     padding-left: 15px;  /* Optional padding */
     padding-right: 15px; /* Optional padding */
   }
+   #about .mt-4 a {
+    display: block;
+    width: 100%;
+    margin-bottom: 25px; /* space between buttons */
+    text-align: center;
+  }
+
+  #about .col-md-6.text-center img {
+    max-width: 350px; /* keeps profile image same size */
+    height: 350px;
+  }
 }
 /* About section text in dark mode */
 body.dark-mode #about,
@@ -593,5 +604,6 @@ body.dark-mode #about a {
   </script>
 
 </body>
+
 
 </html>
