--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ body.dark-mode #about a {
     <div class="offcanvas-body">
       <div class="text-center mb-4">
         <img src="./assets/Manikandan.jpg.jpg" alt="Manikandan Profile" class="rounded-circle"
-          style="width: 100px; height: 100px; object-fit: cover; border: 2px solid #ff523b;">
+          style="width: 100px; height: 100px; object-fit: cover; border: 2px solid #ff523b;" loading="lazy">
       </div>
       <ul class="list-unstyled">
         <li><a href="#about" class="d-block py-2" data-bs-dismiss="offcanvas">About</a></li>
@@ -253,7 +253,7 @@ body.dark-mode #about a {
       </div>
       <div class="col-md-6 text-center">
         <img src="./assets/Manikandan.jpg.jpg" alt="Manikandan Profile" class="img-fluid rounded shadow"
-          style="max-width: 350px; height: 350px; object-fit: cover;">
+          style="max-width: 350px; height: 350px; object-fit: cover;"loading="lazy">
       </div>
     </div>
   </div>
@@ -267,7 +267,7 @@ body.dark-mode #about a {
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="./assets/ecommerence.img.png" class="card-img-top" alt="E-commerce Website">
+          <img src="./assets/ecommerence.img.png" class="card-img-top" alt="E-commerce Website" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">E-commerce Website</h5>
             <p class="card-text">
@@ -282,7 +282,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="./assets/portfolio.jpg.png" class="card-img-top" alt="Portfolio Website">
+          <img src="./assets/portfolio.jpg.png" class="card-img-top" alt="Portfolio Website" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Portfolio Website</h5>
             <p class="card-text">
@@ -296,7 +296,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="assets/animal.jpg" class="card-img-top" alt="Animal Detection and Alert System">
+          <img src="assets/animal.jpg" class="card-img-top" alt="Animal Detection and Alert System" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Animal Detection & Alert System</h5>
             <p class="card-text">
@@ -311,7 +311,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="assets/StudentManagement.png" class="card-img-top" alt="Student Management System">
+          <img src="assets/StudentManagement.png" class="card-img-top" alt="Student Management System" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Student Management System</h5>
             <p class="card-text">
@@ -326,7 +326,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="assets/SPS.png" class="card-img-top" alt="Stone Paper Scissor Game">
+          <img src="assets/SPS.png" class="card-img-top" alt="Stone Paper Scissor Game" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Stone Paper Scissor Game</h5>
             <p class="card-text">
@@ -341,7 +341,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="assets/login.png" class="card-img-top" alt="Login Page">
+          <img src="assets/login.png" class="card-img-top" alt="Login Page" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Login Page</h5>
             <p class="card-text">
