--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ body.dark-mode #about a {
           style="font-size: 48px; background: linear-gradient(to right, #ff416c, #8e2de2); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
           Manikandan
         </h1>
-        <p class="mt-4 fs-5 text-muted"> I am an Electrical and Electronics Engineering graduate with a strong foundation in programming and software development. Skilled in C++, Java, SQL, Oracle, HTML5, CSS3, JavaScript, Bootstrap, JDBC, Servlets, Hibernate, and Spring Boot, with a passion for building efficient solutions and problem-solving. Continuously expanding my knowledge in modern technologies and eager to contribute to team success through both my existing and growing skill set.
+        <p class="mt-4 fs-5 text-muted">I am an Electrical and Electronics Engineering graduate with a strong foundation in programming and software development. Skilled in C++, Java, Oracle SQL, HTML5, CSS3, JavaScript, Bootstrap, ReactJS, JDBC, Servlets, Hibernate, and Spring Boot, with a passion for building efficient solutions and problem-solving. Continuously expanding my knowledge in modern technologies and eager to contribute to team success through both my existing and growing skill set.
         </p>
         <div class="mt-4">
           <a href="Resume/Manikandan R.pdf" download class="btn btn-danger rounded-pill px-4 py-2 me-3 fw-bold">Download
