--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body.dark-mode #about a {
       <i class="bi bi-github"></i>
     </a>
     <a href="https://leetcode.com/Manikandan_2004" target="_blank" class="mx-2">
-      <img src="assets/leetcode.png" alt="LeetCode" style="width:24px; height:24px;">
+      <img src="assets/leetocde.jpeg" alt="LeetCode" style="width:24px; height:24px;">
     </a>
     <a href="https://www.linkedin.com/in/manikandan-r-11879128a/" target="_blank" class="text-primary fs-4">
       <i class="bi bi-linkedin"></i>
@@ -221,7 +221,7 @@ body.dark-mode #about a {
     </div>
     <div class="offcanvas-body">
       <div class="text-center mb-4">
-        <img src="./assets/Manikandan.jpg.jpg" alt="Manikandan Profile" class="rounded-circle"
+        <img src="./assets/mypic.jpg" alt="Manikandan Profile" class="rounded-circle"
           style="width: 100px; height: 100px; object-fit: cover; border: 2px solid #ff523b;" loading="lazy">
       </div>
       <ul class="list-unstyled">
@@ -252,7 +252,7 @@ body.dark-mode #about a {
         </div>
       </div>
       <div class="col-md-6 text-center">
-        <img src="./assets/Manikandan.jpg.jpg" alt="Manikandan Profile" class="img-fluid rounded shadow"
+        <img src="./assets/mypic.jpg" alt="Manikandan Profile" class="img-fluid rounded shadow"
           style="max-width: 350px; height: 350px; object-fit: cover;"loading="lazy">
       </div>
     </div>
@@ -267,7 +267,7 @@ body.dark-mode #about a {
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="./assets/ecommerence.img.png" class="card-img-top" alt="E-commerce Website" loading="lazy">
+          <img src="./assets/ecommerence (1).png" class="card-img-top" alt="E-commerce Website" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">E-commerce Website</h5>
             <p class="card-text">
@@ -282,7 +282,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="./assets/portfolio.jpg.png" class="card-img-top" alt="Portfolio Website" loading="lazy">
+          <img src="./assets/portfolio.png" class="card-img-top" alt="Portfolio Website" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Portfolio Website</h5>
             <p class="card-text">
@@ -296,7 +296,7 @@ body.dark-mode #about a {
 
       <div class="col-md-4">
         <div class="card shadow h-100">
-          <img src="assets/animal.jpg" class="card-img-top" alt="Animal Detection and Alert System" loading="lazy">
+          <img src="assets/animal.jpeg" class="card-img-top" alt="Animal Detection and Alert System" loading="lazy">
           <div class="card-body text-center">
             <h5 class="card-title fw-bold">Animal Detection & Alert System</h5>
             <p class="card-text">
@@ -386,7 +386,7 @@ body.dark-mode #about a {
 
       <div class="col-6 col-md-3">
         <div class="card h-100 shadow-sm border-0 d-flex align-items-center justify-content-center p-3">
-          <img src="assets/html.png" alt="HTML" width="80" height="80" class="rounded-circle mb-3">
+          <img src="assets/html.jpeg" alt="HTML" width="80" height="80" class="rounded-circle mb-3">
           <h6 class="fw-bold mt-auto">HTML</h6>
         </div>
       </div>
@@ -557,7 +557,7 @@ body.dark-mode #about a {
         <i class="bi bi-github"></i>
       </a>
       <a href="https://leetcode.com/Manikandan_2004" target="_blank" class="mx-2">
-        <img src="assets/leetcode.png" alt="LeetCode" style="width:24px; height:24px;">
+        <img src="assets/leetocde.jpeg" alt="LeetCode" style="width:24px; height:24px;">
       </a>
 
       <a href="https://www.linkedin.com/in/manikandan-r-11879128a/" target="_blank" class="mx-2 text-primary fs-5">
